--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "npm run build && git add dist && git commit -m 'build: update dist' || echo 'skip commit' && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
