--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-i18n": "^9.14.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
